--- a/helm-th3-server/templates/service.yaml
+++ b/helm-th3-server/templates/service.yaml
@@ -7,9 +7,9 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
+    - name: http
+      port: {{ .Values.service.externalPort }}
       protocol: TCP
-      name: http
+      targetPort: {{ .Values.service.internalPort }}
   selector:
     {{- include "helm-th3-server.selectorLabels" . | nindent 4 }}
