--- a/helm-th3-server/values.yaml
+++ b/helm-th3-server/values.yaml
@@ -35,7 +35,8 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 8080
+  externalPort: 80
+  internalPort: 8080
 
 ingress:
   enabled: false
