--- a/helm-th3-server/templates/service.yaml
+++ b/helm-th3-server/templates/service.yaml
@@ -8,8 +8,8 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - name: http
-      port: {{ .Values.service.externalPort }}
+      port: {{ .Values.service.port }}
       protocol: TCP
-      targetPort: {{ .Values.service.internalPort }}
+      targetPort: {{ .Values.service.port }}
   selector:
     {{- include "helm-th3-server.selectorLabels" . | nindent 4 }}
